# atlassian-agent

./: .env.example  .gitignore  CONFIG_ENV_TEMPLATE.md  IMPLEMENTATION_SUMMARY.md  PLANNING.md  README.md  SETUP_OAUTH.md  SOLUCION_ERROR_AUTENTICACION.md  TASK.MD  create_admin_user.py  debug_test.py  generate_cookie_secret.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_jira_fix.py  test_simple_jira.py  test_transitions.py  verify_auth_setup.py
.streamlit/: secrets.toml.example  secrets.toml.template  user_atlassian_keys.json.example
Guides and Implementation/: ADVANCED_LOGGING_SYSTEM.md  AUTHENTICATION_GUIDE.md  DEPLOY_GUIDE.md  DEPLOY_STREAMLIT_CLOUD.md  MODO_SIN_AUTENTICACION.md  README_AUTHENTICATION.md  RESPONSIVE_DESIGN.md  TRANSICIONES_Y_ESTADOS.md
agent_core/: confluence_instances.py  jira_instances.py  main_agent.py  output_models.py
config/: auth_service.py  encryption.py  logfire_instrumentation.py  logging_context.py  settings.py  user_credentials_db.py
docs/: ADMIN_GUIDE.md  AUTHENTICATION_SYSTEM.md  INSTALLATION.md  MIGRATION_GUIDE.md  MULTIUSER_MEMORY_SOLUTION.md  README.md  TROUBLESHOOTING.md  USER_CREDENTIALS.md
scripts/: debug_mem0_structure.py  migrate_credentials.py  test_multiuser_memory.py
src/conversational_jira_confluence_agent/config/: settings.py
src/conversational_jira_confluence_agent/ui/: app.py
tests/: test_story_points.py
tools/: confluence_tools.py  date_utils.py  formatting_tools.py  jira_tools.py  mem0_tools.py  time_tools.py
ui/: agent_status_tracker.py  agent_wrapper.py  app.py  custom_styles.py
